# waverover-ros2

cameras_controller/: CMakeLists.txt  package.xml
cameras_controller/config/: params.yaml
cameras_controller/include/cameras_controller/: camera.hpp  camera_rgb.hpp  camera_thm.hpp  cameras_controller.hpp
cameras_controller/launch/: cameras_controller_launch.py
cameras_controller/msg/: CameraFrame.msg  CompressedFrame.msg
cameras_controller/src/: camera.cpp  camera_rgb.cpp  camera_thm.cpp  cameras_controller.cpp  cameras_controller_node.cpp
sllidar_ros2/launch/: sllidar_a1_launch.py  view_sllidar_a1_launch.py
sllidar_ros2/src/: sllidar_node.cpp
ugv_base_general/General_Driver/: General_Driver.ino  IMU.cpp  IMU_ctrl.h  QMI8658.cpp  battery_ctrl.h  json_cmd.h  movtion_module.h  uart_ctrl.h  ugv_advance.h  ugv_config.h
waverover_bringup/: CMakeLists.txt  package.xml
waverover_bringup/config/: ekf.yaml  slam_toolbox_online_async.yaml
waverover_bringup/launch/: waverover.launch.py
waverover_controller/: CMakeLists.txt  package.xml
waverover_controller/config/: params.yaml
waverover_controller/include/waverover_controller/: error.hpp  helpers.hpp  rover_commands.hpp  uart_serial_port.hpp  waverover_controller.hpp
waverover_controller/launch/: waverover_controller.launch.py
waverover_controller/src/: uart_serial_port.cpp  waverover_controller.cpp  waverover_controller_node.cpp
waverover_description/: CMakeLists.txt  package.xml
waverover_description/launch/: description.launch.xml
waverover_description/urdf/: imu.xacro  lidar.xacro  materials.xacro  util.xacro  waverover.gazebo.xacro  waverover.trans.xacro  waverover.xacro
waverover_helpers/: CMakeLists.txt  package.xml
waverover_helpers/include/waverover_helpers/: error.hpp  helpers.hpp
waverover_helpers/src/: helpers.cpp
